--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: quasi-engine
 Priority: extra
 Maintainer: Ken VanDine <ken.vandine@ubuntu.com>
 Build-Depends: debhelper (>= 9),
-               libbox2d-dev,
+               libbox2d-dev (>= 2.3.0),
                pkg-config,
                qt5-default,
                qtbase5-dev,
